Fixed weird dangling ; and emptyList() usage